jumping fixed

--- a/src/components/biography/biography.scss
+++ b/src/components/biography/biography.scss
@@ -22,7 +22,7 @@ img {
     background: #f8f8ff;
     padding: 10px;
     margin-bottom: 2em;
-    scroll-margin-top: 30em;
+    scroll-margin-top: 27em;
   }
 }
 
