--- a/src/components/sketches/sketches.scss
+++ b/src/components/sketches/sketches.scss
@@ -16,7 +16,7 @@
     background: #f8f8ff;
     padding: 10px;
     margin-bottom: 2em;
-    scroll-margin-top: 30em;
+    scroll-margin-top: 27em;
   }
 }
 
@@ -57,6 +57,19 @@
   column-count:         1;
   }
 }
+
+@media (min-width: 1000px) {
+  #sketches #mobileLink {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  #sketches #paintingsArrow {
+    display: none;
+  }
+}
+
 
 #carousel img {
   height: 100%;
